feat: add 3 porotocols plugin

--- a/config/rabbitmq.conf
+++ b/config/rabbitmq.conf
@@ -620,6 +620,7 @@ consumer_timeout = 8100000
 # ## See https://rabbitmq.com/management.html for details.
 #
 management.tcp.port = 15672
+management.login_session_timeout = 600
 # management.tcp.ip   = 0.0.0.0
 #
 # management.tcp.shutdown_timeout   = 7000
@@ -709,15 +710,15 @@ stomp.listeners.tcp.1 = 61613
 # stomp.listeners.tcp.2 = ::1:61613
 ## TCP listener settings
 ##
-stomp.tcp_listen_options.backlog   = 2048
-stomp.tcp_listen_options.recbuf    = 131072
-stomp.tcp_listen_options.sndbuf    = 131072
+#stomp.tcp_listen_options.backlog   = 2048
+#stomp.tcp_listen_options.recbuf    = 131072
+#stomp.tcp_listen_options.sndbuf    = 131072
 #
-stomp.tcp_listen_options.keepalive = true
-stomp.tcp_listen_options.nodelay   = true
+#stomp.tcp_listen_options.keepalive = true
+#stomp.tcp_listen_options.nodelay   = true
 #
-stomp.tcp_listen_options.exit_on_close = true
-stomp.tcp_listen_options.send_timeout  = 120
+#stomp.tcp_listen_options.exit_on_close = true
+#stomp.tcp_listen_options.send_timeout  = 120
 
 ## Proxy protocol support
 ##
@@ -773,6 +774,23 @@ stomp.default_pass = admin
 ## See the plugins or broker documentation for more information.
 ##
 # stomp.proxy_protocol = false
+
+# WEB STOMP section
+## =======================================
+web_stomp.tcp.port = 12345
+
+# connection inactivity timeout
+#web_stomp.cowboy_opts.idle_timeout = 60000
+# max number of pending requests allowed on a connection
+#web_stomp.cowboy_opts.max_keepalive = 200
+# max number of headers in a request
+#web_stomp.cowboy_opts.max_headers   = 100
+# max number of empty lines before request body
+#web_stomp.cowboy_opts.max_empty_lines = 5
+# max request line length allowed in requests
+#web_stomp.cowboy_opts.max_request_line_length
+
+
 
 ## ----------------------------------------------------------------------------
 ## RabbitMQ MQTT Adapter
@@ -861,6 +879,9 @@ mqtt.subscription_ttl = 1800000
 ## messages that will be delivered).
 #
 mqtt.prefetch = 10
+
+
+web_mqtt.tcp.port = 9001
 
 
 ## ----------------------------------------------------------------------------
