--- a/kube/rc.yaml
+++ b/kube/rc.yaml
@@ -11,7 +11,7 @@ spec:
                 app: message-broker
         spec:
             containers:
-                - image: 10.0.0.255:5000/gedge-platform/message-broker:1.4 # add stomp plugin
+                - image: imxsuu/gedge:gs-broker 
                   name: message-broker
                   ports:
                       - containerPort: 5672
@@ -21,6 +21,10 @@ spec:
                       - containerPort: 1883
                         protocol: TCP
                       - containerPort: 61613
+                        protocol: TCP
+                      - containerPort: 12345
+                        protocol: TCP
+                      - containerPort: 9001
                         protocol: TCP
                   imagePullPolicy: Always
                   env:
